--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Simple Calculator</title>
-<style>
-    
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="calculator">
@@ -36,19 +34,7 @@
 </div>
 
 <script>
-    function addToDisplay(value) {
-        document.getElementById('display').value += value;
-    }
-
-    function clearDisplay() {
-        document.getElementById('display').value = '';
-    }
-
-    function calculate() {
-        let expression = document.getElementById('display').value;
-        let result = eval(expression);
-        document.getElementById('display').value = result;
-    }
+   
 </script>
 </body>
 </html>
