--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
     <input type="button" value="Clear" onclick="clearDisplay()">
 </div>
 
-<script>
-   
-</script>
+<script src="index.js"></script>
 </body>
 </html>
