--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="calculator">
+    <div>
     <input type="text" id="display" readonly>
     <br>
     <input type="button" value="7" onclick="addToDisplay('7')">
@@ -31,6 +32,7 @@
     <input type="button" value="+" onclick="addToDisplay('+')">
     <br>
     <input type="button" value="Clear" onclick="clearDisplay()">
+</div>
 </div>
 
 <script src="index.js"></script>
