--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="calculator">
-    <div>
+    <div class="container">
     <input type="text" id="display" readonly>
     <br>
     <input type="button" value="7" onclick="addToDisplay('7')">
