--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="button" value="=" onclick="calculate()">
     <input type="button" value="+" onclick="addToDisplay('+')">
     <br>
-    <input type="button" value="Clear" onclick="clearDisplay()">
+    <input type="button" value="Clear" class="clearbutton" onclick="clearDisplay()">
     </div>
 </div>
 
